bk_ida/gccida/c0/insn_dead_p
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/insn_dead_p/src/flow.c:2529:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code code; // [rsp+44h] [rbp-2Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/insn_dead_p/src/flow.c:2549:52: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( temp = pbi->mem_set_list; temp; temp = ( rtx)temp[1] ) 
                                                   ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/insn_dead_p/src/flow.c:2551:16: error: expected expression
if ( operator+=<char [3], QByteArray>( r, temp->fld[0].rtx) ) 
               ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/insn_dead_p/src/flow.c:2551:6: error: use of undeclared identifier 'operator'
if ( operator+=<char [3], QByteArray>( r, temp->fld[0].rtx) ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/insn_dead_p/src/flow.c:2551:17: error: expected expression
if ( operator+=<char [3], QByteArray>( r, temp->fld[0].rtx) ) 
                ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/insn_dead_p/src/flow.c:2622:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)r)] != MODE_COMPLEX_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/insn_dead_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/insn_dead_p/src/flow.c:2623:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v13 = mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)r)] == MODE_COMPLEX_FLOAT; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/insn_dead_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/insn_dead_p/src/obj/flow.o] Error 1
